created ionic modal to display tags

--- a/client/templates/suggestion.html
+++ b/client/templates/suggestion.html
@@ -70,7 +70,7 @@
 			</div>
         	<div class="row">
             	<div class="col col-33">
-                	<div class="div1">
+                	<div class="div1" ng-click="suggestion.openModal()">
                         <img src="/d1.png"/>
                         <div class="rating-value">
                         	<span>
