--- a/client/templates/change_password.html
+++ b/client/templates/change_password.html
@@ -14,19 +14,19 @@
           <div class="review-form edit-profile">
             <div class="list list_item switch-notify">
               <label class="item-input item-floating-label">
-                <span class="icon-top user"><img src="./key.png" alt="" ></span>
+                <span class="icon-top user change-pass"><img src="./key.png" alt="" ></span>
                 <span class="icon-wrap">
                   <input type="text" placeholder="Current Password">
                 </span>
               </label>
               <label class="item-input item-floating-label">
-                <span class="icon-top user"><img src="./key.png" alt="" ></span>
+                <span class="icon-top user change-pass"><img src="./key.png" alt="" ></span>
                 <span class="icon-wrap">
                   <input type="text" placeholder="New Password">
                 </span>
               </label>
               <label class="item-input item-floating-label">
-                <span class="icon-top user"><img src="./key.png" alt="" ></span>
+                <span class="icon-top user change-pass"><img src="./key.png" alt="" ></span>
                 <span class="icon-wrap">
                   <input type="text" placeholder="Confirm New Password">
                 </span>
