--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -265,16 +265,17 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 
 /*****25-10-2016*****/
 .slide-wrap{float:left;width:100%;clear:both;text-align:center;}
-.slide-wrap h3{color:#e23814;text-transform:uppercase;font-size: 17px;margin:5px 0 0}
+.slide-wrap h3{color:#e23814;font-size: 17px;margin:5px 0 0}
 .next-btn{background-color:#e23814;border-radius: 25px;text-align:center;float:none;clear: both;color: #fff;display:block;font-size:18px; margin:3px auto 10px;padding: 10px 0;text-decoration: none;text-transform: uppercase; width: 130px;}
 .next-btn:hover{background-color:#ddd;color:#e23814}
 
 .dsh-img{height: 210px;}
+.reviews .dsh-img{height:auto}
 .reviews-final .dsh-img{height: 110px;width: 145px;}
 .dsh-img img{height:100%}
 .review-form{margin:15px 0 0}
 .review-form .icon-top{top:10px;height:27px;display:block;position:static;width:10%;float:left}
-.edit-profile .toggle .icon-top{width:20%}
+.edit-profile .toggle .icon-top{width: 27%;margin-right: 7px;}
 .review-form .icon-wrap{width:87%;display:block;float:left;}
 .review-form .location{top:12px;height:27px}
 .review-form input{border-bottom:1px solid;border-color:rgba(0, 0, 0, 0.4)}
@@ -290,7 +291,7 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .review-form ::-webkit-input-placeholder , .review-form textarea::-webkit-input-placeholder { color:  #aaa;opacity:1;text-transform:uppercase;font-weight:300;font-size:16px;}
 .review-form input:-moz-placeholder { color:  #aaa;opacity:1;font-weight:300}
 .no-suggestion{height:100%;text-align:center;position:relative;top:0;bottom:0;left:0;right:0}
-.no-content{position:absolute;left:0;top:50%;transform:translateY(50%);right:0}
+.no-content{position:absolute;left:0;top:35%;transform:translateY(50%);right:0}
 .no-content h4{font-size:28px;margin-bottom:5px;color:#777170}
 .no-content p{font-size:21px;color:#777170;font-weight:300}
 .user-del{padding: 0 5px}
@@ -300,12 +301,12 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .center-img a:hover{color:#444}
 .switch-notify .toggle-balanced{margin-top:0px}
 .switch-notify .toggle .track{height:25px}
-.switch-notify .toggle .handle{  height: 22px;left: 8px;top: 6px;}
+.switch-notify .toggle .handle{  height: 22px;left: 41px;top: 6px;}
 .switch-notify .track, .switch-notify .handle{margin-left:10px}
 .switch-notify .toggle-balanced img{width:25px;height:24px;margin-left:7px}
 .notify{vertical-align:middle}
-.switch-notify .icon-top {top:17px}
-.switch-notify .toggle-balanced .icon-top {top:4px}
+.switch-notify .icon-top {padding-top: 8px;}
+.switch-notify .toggle-balanced .icon-top {padding-top: 0;}
 .changepass{text-decoration:none;text-align:center}
 .changepass:hover{color:#444}
 .edit-profile{margin: 0}
@@ -330,8 +331,8 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .left-icon img { width: auto; height: auto;}
 
 .icon-wrap textarea{margin-left:10px;border-bottom:1px solid rgba(0, 0, 0, 0.4)}
-.dsh-del{float:left;width:85%;padding:0 15px}
-.dsh-del .left-icon {display: inline-block;height: 27px;vertical-align: middle;}
+.dsh-del{float:left;width:50%;padding:0 10px}
+.dsh-del .left-icon {display: inline-block;height: 27px;vertical-align: middle;margin-right: 5px}
 .reviews-final .next-btn{width:150px}
 .content-box p{margin:0}
 .dsh-del .rate-box{margin:0}
@@ -340,6 +341,38 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .review-form .item-input{padding:6px 0}
 .log-form .icon-top{top:8px;}
 .register-form .icon-top{top:4px;}
+.no-record{color:#9c9998;font-size: 14px;margin-left: 5px}
+.no-cnt, .h-auto{height:auto;}
+
+/*Tithi 10-11-2016*/
+.nxt{float: left;
+    width: 13%;
+    text-align: right;
+    display: inline-block;
+    margin: 11px  0 0;
+    color: #fff;}
+.nxt a{color:#fff;font-size: 16px}
+.next-bar h2{float:left;width:73%;}
+.change-pass img{width: 28px!important}
+.mobi-50{float: left;width: 50%}
+.icn-wrap{display: table;height: 55px;text-align: center;
+    vertical-align: middle;
+    width: 100%;}
+    .top-wrap{border: 2px solid #eee;border-radius:4px;
+}
+.icon-img{    display: table-cell;vertical-align: middle;
+    height: 90px;
+    width: 100%;}
+.icon-img img{max-width:100%;height:auto;width:auto;}
+.review-icons p{    font-size: 14px;
+    color: #555;
+    font-weight: 600;
+    margin-top: -20px;
+}
+.review-icons{position: absolute;left: 0;right: 0;top:0px;   text-align: center;
+    
+}
+.reviw-box{position: relative;}
 /*---------media-------*/
 @media not all, (-webkit-min-device-pixel-ratio: 1.5), not all, (min-resolution: 144dpi), (min-resolution: 1.5dppx){
   .bar{background-size:100% 0px}
@@ -354,7 +387,7 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
   .resturant-detail h3{font-size:22px}
   .feed .resturant-name{max-height:22px;overflow:hidden}
   .edit-btn{font-size:18px}
-  .reviews-final .dsh-img{height: 100px;width: 100px;}
+  .reviews-final .dsh-img{height: 154px;width: 50%;}
 }
 @media(max-width:420px){
     .rating-value span i{font-size:14px}
