--- a/client/templates/review.html
+++ b/client/templates/review.html
@@ -1,22 +1,3 @@
-<!-- <ion-view title="Profile">
-  <ion-content> -->
-    <!-- content display here -->
-    <!-- <a ng-click="profile.openGallery();">Gallery</a>
-    <br><br>
-    <a ng-click="profile.clickPicture();">Click Picture</a>
-    <br><br>
-    <a ng-click="profile.clickPhoto();">clickPhoto</a>
-    <br><br>
-    <a ng-click="profile.switchCamera();">switchCamera</a> -->
-    <!-- <div ng-if="profile.image">
-      <img src="{{profile.image}}"/>
-    </div>
-    <img src="/img2.jpg"/> -->
-    <!-- <p><img id="previewPicture" width="200"/></p>
-    <p><img id="originalPicture" width="200"/></p>
-  </ion-content>
-</ion-view> -->
-
 <ion-view view-title="Review">
   <ion-header-bar align-title="left" class="bar-positive">
     <div class="bar bar-header bar-light head_bar rev-header">
@@ -28,9 +9,6 @@
   </ion-header-bar>
   <ion-content>
     <div class="full_back suggest">
-      <!-- <div class="dish-image" ng-if="review.image" >
-        <img src="{{review.image}}" alt="" />
-      </div> -->
       <div class="dish-image" style="display: none;">
         <img src="/dish-view.png" alt="" />
       </div>
@@ -41,9 +19,57 @@
           </div>
         </div>
       </div>
-      </div>
+
+      <div class="reviw-box">
+        <div class="review-icons">
+          
+          <div class="row">
+            <div class="col">
+            <div class="top-wrap">
+              <div class="icn-wrap">
+                <a class="icon-img" ng-click="review.openGallery()">
+                  <img src="/gallery.png" alt="" class="inactive">
+                  <img src="/gallery-hover.png" class="active" alt="" style="display:none">
+                </a>
+              </div><p>Choose from gallery</p>
+            </div>  
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col">
+            <div class="top-wrap">
+              <div class="icn-wrap">
+                  <a class="icon-img" ng-click="review.captureVideo()">
+                    <img src="/video.png" alt="" class="inactive">
+                    <img src="/video-hover.png" alt="" style="display:none"  class="active">
+                    
+                  </a>
+              </div><p>Shoot a video</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col">
+            <div class="top-wrap">
+              <div class="icn-wrap">
+                
+                  <a class="icon-img" ng-click="review.clickPicture()">
+                    <img src="/cam.png" alt=""  class="inactive" style="display:none">
+                    <img src="/cam-hover.png" alt="" class="active">
+                  </a>
+                
+              </div><p>Take a picture</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>  
+    </div>
   </ion-content>
-    <div class="bar-assertive suggest_foot review">
+    <!-- <div class="bar-assertive suggest_foot review">
       <div class="tabs tabs-icon-top dish-view rev-tabs">
           <a class="tab-item" ng-click="review.openGallery()">
             <img src="/gallery.png" alt="" class="inactive">
@@ -58,5 +84,5 @@
             <img src="/video-hover.png" alt="" style="display:none"  class="active">
           </a>
         </div>
-    </div>
+    </div> -->  
 </ion-view>
