--- a/client/templates/settings.html
+++ b/client/templates/settings.html
@@ -8,7 +8,7 @@
     </div>
   </ion-header-bar>
   <ion-content>
-    <div class="full_back suggest reviews">
+    <div class="full_back suggest reviews h-auto">
       <div class="row">
         <div class="col">
           <div class="center-img">
