--- a/client/templates/suggestion.html
+++ b/client/templates/suggestion.html
@@ -8,190 +8,194 @@
 		</div>
 	</ion-header-bar>
 	<ion-content>
-	  <div class="full_back suggest">
-			<div class="row">
-          		<div class="col col-33">
-                    <div class="div1" ng-click="suggestion.redirectToDish()">
-                        <img src="/d1.png"/>
-                        <div class="rating-value">
-                        	<span>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/half-star.png" alt=""/>
-                            <img src="/empty-star.png" alt=""/>
-                          </span>
-                           <span class="pull-right">
-                           		4mi
-                           </span>
-                    	</div>
-                        <p class="dish-name">Tasty chicken tacos...</p>
-                        <p class="resturant-name">KFC Restaurant</p>
-                    </div>
-          		</div>
-                <div class="col col-33">
-                    <div class="div1" ng-click="suggestion.redirectToDish()">
-                        <img src="/d3.png"/>
-                        <div class="rating-value">
-                        	<span>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/half-star.png" alt=""/>
-                            <img src="/empty-star.png" alt=""/>
-                          </span>
-                           <span class="pull-right">
-                           		2mi
-                           </span>
-                    	</div>
-                        <p class="dish-name">Tasty chicken tacos...</p>
-                        <p class="resturant-name">KFC Restaurant</p>
-                    </div>
-                </div>
-                <div class="col col-33">
-                	<div class="div1" ng-click="suggestion.redirectToDish()">
-                        <img src="/d1.png"/>
-                        <div class="rating-value">
-                        	<span>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/half-star.png" alt=""/>
-                            <img src="/empty-star.png" alt=""/>
-                          </span>
-                           <span class="pull-right">
-                           		2mi
-                           </span>
-                    	</div>
-                        <p class="dish-name">Burger with cheddar...</p>
-                        <p class="resturant-name">KFC Restaurant</p>
-                	</div>
-                </div>
-			</div>
-        	<div class="row">
-            	<div class="col col-33">
-                	<div class="div1" ng-click="suggestion.openModal()">
-                        <img src="/d1.png"/>
-                        <div class="rating-value">
-                        	<span>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/half-star.png" alt=""/>
-                            <img src="/empty-star.png" alt=""/>
-                          </span>
-                           <span class="pull-right">
-                           		4mi
-                           </span>
-                    	</div>
-                        <p class="dish-name">Burger with cheddar...</p>
-                        <p class="resturant-name">KFC Restaurant</p>
-                	</div>
-              	</div>
-                <div class="col col-33">
-                	<div class="div1">
-                        <img src="/d3.png"/>
-                        <div class="rating-value">
-                        	<span>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/half-star.png" alt=""/>
-                            <img src="/empty-star.png" alt=""/>
-                          </span>
-                           <span class="pull-right">
-                           		2mi
-                           </span>
-                    	</div>
-                        <p class="dish-name">Italian pizza salami</p>
-                        <p class="resturant-name">KFC Restaurant</p>
-                	</div>
-              	</div>
-                <div class="col col-33">
-                	<div class="div1">
-                        <img src="/d1.png"/>
-                        <div class="rating-value">
-                        	<span>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/half-star.png" alt=""/>
-                            <img src="/empty-star.png" alt=""/>
-                          </span>
-                           <span class="pull-right">
-                           		2mi
-                           </span>
-                    	</div>
-                        <p class="dish-name">Tasty chicken tacos...</p>
-                        <p class="resturant-name">KFC Restaurant</p>
-                	</div>
-              	</div>
-         </div>
-        	<div class="row">
-          		<div class="col col-33">
-          			<div class="div1">
-                        <img src="/d1.png"/>
-                        <div class="rating-value">
-                        	<span>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/half-star.png" alt=""/>
-                            <img src="/empty-star.png" alt=""/>
-                          </span>
-                           <span class="pull-right">
-                           		4mi
-                           </span>
-                    	</div>
-                        <p class="dish-name">Tasty chicken tacos...</p>
-                        <p class="resturant-name">KFC Restaurant</p>
-            		</div>
-          		</div>
-                <div class="col col-33">
-                    <div class="div1">
-                        <img src="/d3.png"/>
-                        <div class="rating-value">
-                        	<span>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/half-star.png" alt=""/>
-                            <img src="/empty-star.png" alt=""/>
-                          </span>
-                           <span class="pull-right">
-                           		2mi
-                           </span>
-                    	</div>
-                        <p class="dish-name">Tasty chicken tacos...</p>
-                        <p class="resturant-name">KFC Restaurant</p>
-                    </div>
-                </div>
-                <div class="col col-33">
-                    <div class="div1">
-                        <img src="/d1.png"/>
-                        <div class="rating-value">
-                        	<span>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/fill-star.png" alt=""/>
-                            <img src="/half-star.png" alt=""/>
-                            <img src="/empty-star.png" alt=""/>
-                          </span>
-                           <span class="pull-right">
-                           		2mi
-                           </span>
-                    	</div>
-                        <p class="dish-name">Burger with cheddar...</p>
-                        <p class="resturant-name">KFC Restaurant</p>
-                    </div>
-                </div>
-			</div>
-   		</div>
-<!-- 	   <div class="no-suggestion">
-      <div class="no-content">
-        <h4>No suggestions currently available</h4>
-        <p>Try the search icon below to search by tags and more</p>
+	<!--
+  <div class="full_back suggest">
+	  <div class="row">
+    	<div class="col col-33">
+        <div class="div1" ng-click="suggestion.redirectToDish()">
+          <img src="/d1.png"/>
+          <div class="rating-value">
+          	<span>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/half-star.png" alt=""/>
+              <img src="/empty-star.png" alt=""/>
+            </span>
+            <span class="pull-right">
+            	4mi
+            </span>
+      	  </div>
+          <p class="dish-name">Tasty chicken tacos...</p>
+          <p class="resturant-name">KFC Restaurant</p>
+        </div>
       </div>
-    </div> -->
+      <div class="col col-33">
+        <div class="div1" ng-click="suggestion.redirectToDish()">
+          <img src="/d3.png"/>
+          <div class="rating-value">
+          	<span>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/half-star.png" alt=""/>
+              <img src="/empty-star.png" alt=""/>
+            </span>
+            <span class="pull-right">
+             	2mi
+            </span>
+      	  </div>
+          <p class="dish-name">Tasty chicken tacos...</p>
+          <p class="resturant-name">KFC Restaurant</p>
+        </div>
+      </div>
+      <div class="col col-33">
+      	<div class="div1" ng-click="suggestion.redirectToDish()">
+          <img src="/d1.png"/>
+          <div class="rating-value">
+          	<span>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/half-star.png" alt=""/>
+              <img src="/empty-star.png" alt=""/>
+            </span>
+            <span class="pull-right">
+             	2mi
+            </span>
+      	  </div>
+          <p class="dish-name">Burger with cheddar...</p>
+          <p class="resturant-name">KFC Restaurant</p>
+      	</div>
+      </div>
+		</div>
+  	<div class="row">
+    	<div class="col col-33">
+      	<div class="div1">
+          <img src="/d1.png"/>
+          <div class="rating-value">
+          	<span>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/half-star.png" alt=""/>
+              <img src="/empty-star.png" alt=""/>
+            </span>
+            <span class="pull-right">
+              4mi
+            </span>
+      	  </div>
+          <p class="dish-name">Burger with cheddar...</p>
+          <p class="resturant-name">KFC Restaurant</p>
+      	</div>
+      </div>
+      <div class="col col-33">
+      	<div class="div1">
+          <img src="/d3.png"/>
+          <div class="rating-value">
+          	<span>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/half-star.png" alt=""/>
+              <img src="/empty-star.png" alt=""/>
+            </span>
+            <span class="pull-right">
+            	2mi
+            </span>
+      	  </div>
+          <p class="dish-name">Italian pizza salami</p>
+          <p class="resturant-name">KFC Restaurant</p>
+      	</div>
+    	</div>
+      <div class="col col-33">
+      	<div class="div1">
+          <img src="/d1.png"/>
+          <div class="rating-value">
+          	<span>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/half-star.png" alt=""/>
+              <img src="/empty-star.png" alt=""/>
+            </span>
+            <span class="pull-right">
+           		2mi
+            </span>
+      	  </div>
+          <p class="dish-name">Tasty chicken tacos...</p>
+          <p class="resturant-name">KFC Restaurant</p>
+      	</div>
+    	</div>
+    </div>
+  	<div class="row">
+  		<div class="col col-33">
+  			<div class="div1">
+          <img src="/d1.png"/>
+          <div class="rating-value">
+          	<span>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/half-star.png" alt=""/>
+              <img src="/empty-star.png" alt=""/>
+            </span>
+            <span class="pull-right">
+            	4mi
+            </span>
+      	  </div>
+          <p class="dish-name">Tasty chicken tacos...</p>
+          <p class="resturant-name">KFC Restaurant</p>
+    		</div>
+  		</div>
+      <div class="col col-33">
+        <div class="div1">
+          <img src="/d3.png"/>
+          <div class="rating-value">
+          	<span>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/half-star.png" alt=""/>
+              <img src="/empty-star.png" alt=""/>
+            </span>
+            <span class="pull-right">
+              2mi
+            </span>
+      	  </div>
+          <p class="dish-name">Tasty chicken tacos...</p>
+          <p class="resturant-name">KFC Restaurant</p>
+        </div>
+      </div>
+      <div class="col col-33">
+        <div class="div1">
+          <img src="/d1.png"/>
+          <div class="rating-value">
+          	<span>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/fill-star.png" alt=""/>
+              <img src="/half-star.png" alt=""/>
+              <img src="/empty-star.png" alt=""/>
+            </span>
+            <span class="pull-right">
+            	2mi
+            </span>
+        	</div>
+          <p class="dish-name">Burger with cheddar...</p>
+          <p class="resturant-name">KFC Restaurant</p>
+        </div>
+      </div>
+		</div>
+  </div>
+  -->
+ 	   
+  <div class="no-suggestion">
+    <div class="no-content">
+      <h4>No suggestions currently available</h4>
+      <p>Try the search icon below to search by tags and more</p>
+    </div>
+  </div> 
+
   </ion-content>
 </ion-view>
