--- a/client/templates/review.html
+++ b/client/templates/review.html
@@ -57,7 +57,7 @@
                 
                   <a class="icon-img" ng-click="review.clickPicture()">
                     <img src="/cam.png" alt=""  class="inactive" style="display:none">
-                    <img src="/cam-hover.png" alt="" class="active">
+                    <img src="/cam-new.png" alt="" class="active">
                   </a>
                 
               </div><p>Take a picture</p>
