--- a/client/templates/suggestion.html
+++ b/client/templates/suggestion.html
@@ -10,7 +10,7 @@
 	<ion-content>
 	
   <div class="full_back suggest">
-	<!--  
+ 
     <div class="row">
     	<div class="col col-33">
         <div class="div1" ng-click="suggestion.redirectToDish()">
@@ -188,14 +188,13 @@
         </div>
       </div>
 		</div>
-  -->
  	   
-      <div class="no-suggestion">
+      <!-- <div class="no-suggestion">
         <div class="no-content">
           <h4>No suggestions currently available</h4>
           <p>Try the search icon below to search by tags and more</p>
         </div>
-      </div> 
+      </div> -->
     </div>
   </ion-content>
 </ion-view>
