--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -174,8 +174,22 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .search-input input::-ms-input-placeholder{color:#8d8d8d;text-transform:capitalize;font-size:18px;font-weight:400;opacity:1}
 .search-icon{width:auto;position:absolute;top:16px}
 .search-input input{padding:0 0 0 30px}
-.search-select{ border:none;height: 100%; width: 100%;color:#8d8d8d;font-size:18px;font-weight:400}
-.select-style {padding: 0;margin: 0;overflow: hidden;background: #fff url(./drop-down.png) no-repeat 90% 50%;height:100%}
+.search-select{ background: url(./drop-down.png) no-repeat 90% 50%;border:none;height: 100%; width: 100%;color:#8d8d8d;font-size:18px;font-weight:400}
+.select-style {padding: 0;margin: 0;overflow: hidden;height:100%}
+.item-select select{max-width: 100%;background-color: #f9f9f9}
+.input-label{padding: 0}
+.item-select{border:none;background-color: #f9f9f9}
+.search-select select {
+    padding: 5px 8px;
+    width: 100%;
+    border: none;
+    box-shadow: none;
+    background-color: transparent;
+    background-image: none;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+}
 .user-img img{height:35px;width:35px;border-radius:50%}
 .user-rate{float:left;width:100%;}
 .user-rate > span{float:left;width:40%}
@@ -369,10 +383,21 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
     font-weight: 600;
     margin-top: -20px;
 }
-.review-icons{position: absolute;left: 0;right: 0;top:0px;   text-align: center;
+.review-icons{display: table-cell;
+    width: 100%;
+    vertical-align: middle; text-align: center;
     
 }
-.reviw-box{position: relative;}
+.reviw-box{position: relative; display: table;
+    width: 100%;
+    height: 100%;}
+  .dishtop{top:102px;}
+  .serach-ht{height: auto;}
+
+  .item-select-rw select{
+    font-size: 17px;
+    color: #8e8a8a;
+  }
 /*---------media-------*/
 @media not all, (-webkit-min-device-pixel-ratio: 1.5), not all, (min-resolution: 144dpi), (min-resolution: 1.5dppx){
   .bar{background-size:100% 0px}
@@ -398,7 +423,7 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
     .user-rate > span, .user-rate > .user-name{float:left;width:100%}
     .user-name > span{float:right}
     .resturant-detail .row{display:block}
-
+    .reviews-final .dsh-img{height: 154px;width: 50%;}
     .back_arrrow h2{font-size:20px}
     .user-detail h3{font-size:24px}
     .user-detail p{font-size:14px}
@@ -424,7 +449,7 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
   .resturant-name{line-height:15px; max-height: 30px;}
   .star-img {margin-top: 0;}
   .edit-btn, .user-detail h3{margin:0!important}
-  .reviews-final .dsh-img{height: 90px;width: 90px;}
+  .reviews-final .dsh-img{height: 154px;width: 50%;}
   .resturant-detail h3{font-size:18px}
   .resturant-detail p{margin-left:0px;}
   .htl-name p{font-size:13px;  margin-left: 26px;}
@@ -451,4 +476,5 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
   .fb_btn{font-size:14px!important;}
   .user-name > .user-img{width:17%}
   .fb_btn img {height: 14px; width: 10px;}
+  .reviews-final .dsh-img{height: 154px;width: 50%;}
 }
