--- a/client/templates/search.html
+++ b/client/templates/search.html
@@ -14,17 +14,29 @@
                 <div class="row">
                   <div class="col col-67 search-input">
                       <img src="/search-icon.png" alt="" class="search-icon" />
-                      <input type="text" placeholder="Search...">
+                      <!--<input type="text" id="searchBox" placeholder="Search..."> -->
+                      <angucomplete-alt id="searchBox"
+                        placeholder="Search..."
+                        pause="500"
+                        selected-object="search.selectedData"
+                        remote-url="{{search.serverUrl}}"
+                        remote-url-request-formatter="search.remoteUrlRequestFn"
+                        remote-url-data-field="items"
+                        title-field="name"
+                        minlength="1"
+                        input-class="form-control form-control-small"
+                        match-class="highlight"></angucomplete-alt>
                     </div>
                     <div class="col col-33">
                       <label class="item item-input item-select item-select-rw">
                         <div class="input-label">
                           Lightsaber
                         </div>
-                        <select>
-                          <option selected>Filter</option>
-                          <option>Green</option>
-                          <option>Red</option>
+                        <!-- <select>
+                          <option selected>by restaurant</option>
+                          <option>by dish</option>
+                        </select> --> 
+                        <select ng-model="search.selectedBy" ng-change="search.changedValue()" ng-options="select.label for select in search.selectList">           
                         </select>
                       </label>
                     </div>
@@ -37,7 +49,7 @@
     	
 		<div class="full_back suggest">
 			<div class="row">
-          		<div class="col col-33">
+          		<div class="col col-33" ng-click="search.vall()">
                     <div class="div1">
                         <img src="/d1.png"/>
                         <div class="rating-value">
