--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -92,17 +92,17 @@ img{max-width:100%;width:100%;}
 .list_item input, .content2 input {border-bottom: 2px solid;border-color:rgba(255, 255, 255, 0.4)}
 .item-floating-label .input-label.has-input{color:#fff;}
 input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: #fff ;opacity:0.5;font-weight:300;font-size:16px;text-transform:uppercase
+  color: #fff ;opacity:1;font-weight:300;font-size:16px;text-transform:uppercase
 }
 input::-moz-placeholder, textarea::-moz-placeholder { /* Firefox 19+ */
-  color: #fff ;opacity:0.5;font-weight:300;font-size:16px;text-transform:uppercase
+  color: #fff ;opacity:1;font-weight:300;font-size:16px;text-transform:uppercase
 }
 input:-ms-input-placeholder { /* IE 10+ */
-  color: #fff ;opacity:0.5;font-weight:300;font-size:16px;text-transform:uppercase
+  color: #fff ;opacity:1;font-weight:300;font-size:16px;text-transform:uppercase
 }
 input:-moz-placeholder { /* Firefox 18- */
   color: #fff ;opacity:1;font-weight:300}
-.div1 {padding:4px;-webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.29);
+.div1 {padding:5px;-webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.29);
 -moz-box-shadow:    0px 1px 3px 0px rgba(0, 0, 0, 0.29);
 box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .suggest .div1 span {color: #ffffff;display: block;text-align: center;}
@@ -140,7 +140,7 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 
 /*****14-10-2016*****/
 .icon-wrap {position:relative;}
-.icon-top{width:42px;height:29px;text-align:center;float:left;position:absolute;left:-5px;top:20px}
+.icon-top{width:42px;height:29px;text-align:center;float:left;position:absolute;left:-5px;top:22px}
 .icon-top.key{top:22px}
 .icon-wrap input{padding-left:42px;padding-right:0}
 .icon-top img{width:auto;height:auto;float:none;margin:0 auto;}
@@ -158,8 +158,12 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .rating-value span:first-of-type{float:left;width:70%}
 .rating-value span:last-of-type{float:left;width:30%;font-size:13px;color:#777170;line-height:15px;}
 .rating-value{float:left;width:100%;clear:both}
-.dish-name{color:#777170;font-size:14px;font-weight:500;width:100%;overflow:hidden; text-overflow: ellipsis;white-space: nowrap;margin-bottom:0}
-.resturant-name{color:#777170;font-size:13px;font-weight:300;margin-bottom:0}
+.dish-name{color:#777170;font-size:14px;font-weight:500;width:100%;overflow:hidden; text-overflow: ellipsis;white-space: nowrap;margin-bottom:0;line-height:16px}
+.resturant-name{color:#777170;font-size:13px;font-weight:300;margin-bottom:0;  overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
+}
 .dish-view a{opacity:1}
 .center-btn{  border: 11px solid #e23814;border-radius: 50%;height: 90px;margin:0 auto;width: 90px;}
 .btn-wrap {border-radius: 50%;box-shadow: 0 0 0 0 rgba(250, 80, 54, 0.4) inset, 0 0 0 16px rgba(255, 255, 255, 0.6) inset, 0 1px 2px rgba(0, 0, 0, 0.1);cursor: default;
@@ -169,13 +173,14 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .tabs{height:90px}
 .no-padding{padding:0}
 .search-input{border-right:1px solid #d2d0d0}
-.search-input input::-moz-placeholder{color:#8d8d8d;text-transform:capitalize;font-size:18px;font-weight:400;opacity:1}
+.search-input input::-moz-placeholder{color:#c9c9c9;text-transform:capitalize;font-size:18px;font-weight:400;opacity:1}
 .search-input input::-webkit-input-placeholder{color:#8d8d8d;text-transform:capitalize;font-size:18px;font-weight:400;opacity:1}
 .search-input input::-ms-input-placeholder{color:#8d8d8d;text-transform:capitalize;font-size:18px;font-weight:400;opacity:1}
 .search-icon{width:auto;position:absolute;top:16px}
 .search-input input{padding:0 0 0 30px}
-.search-select{ background: url(./drop-down.png) no-repeat 90% 50%;border:none;height: 100%; width: 100%;color:#8d8d8d;font-size:18px;font-weight:400}
+.search-select{ background:url(./drop-down.png) no-repeat 90% 50%;border:none;height: 100%; width: 100%;color:#8d8d8d;font-size:18px;font-weight:400}
 .select-style {padding: 0;margin: 0;overflow: hidden;height:100%}
+.search-bg{background:#f9f9f9}
 .item-select select{max-width: 100%;background-color: #f9f9f9}
 .input-label{padding: 0}
 .item-select{border:none;background-color: #f9f9f9}
@@ -219,7 +224,7 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .user-name h5{color:#777170;font-size:14px;margin:0;font-weight:500}
 .user-del p{color:#9c9998;font-size:14px;margin:0}
 .your-post{margin:0;color:#777170;font-size:18px;text-transform:uppercase}
-.search-bg{background-color:#f9f9f9}
+
 .edit-btn img{height:auto;width:auto}
 .edit-btn{background-color:#fff}
 .has-footer {
@@ -259,7 +264,10 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .fb_btn{width:100%;background-color:#475993!important;color:#fff!important;font-size:16px!important}
 .fb_btn img{width:8px;height:15px}
 .fb_btn span{vertical-align:middle;margin-right:7px}
-.star-img{margin-top:10px}
+.star-img {
+    margin-bottom: -5px;
+    margin-top: -2px;
+}
 .star-img > img {width: 25px;}
 .read-more{text-align:left!important}
 .read-more a{color:#E23814;text-decoration:none;}
@@ -354,7 +362,7 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .comments textarea{float:left;width:85%;margin:0 0 0 5px}
 .review-form .item-input{padding:6px 0}
 .log-form .icon-top{top:8px;}
-.register-form .icon-top{top:4px;}
+.register-form .icon-top{top:5px;}
 .no-record{color:#9c9998;font-size: 14px;margin-left: 5px}
 .no-cnt, .h-auto{height:auto;}
 
@@ -398,6 +406,16 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
     font-size: 17px;
     color: #8e8a8a;
   }
+  
+  
+.scroll{height:100%}
+.feed .div1 > .row{padding:0}
+.resturant-detail {
+    float: left;
+    margin-bottom: 15px;
+    width: 100%;
+}
+.dish-slide, .profile-posts{height:auto}
 /*---------media-------*/
 @media not all, (-webkit-min-device-pixel-ratio: 1.5), not all, (min-resolution: 144dpi), (min-resolution: 1.5dppx){
   .bar{background-size:100% 0px}
@@ -427,21 +445,22 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
     .back_arrrow h2{font-size:20px}
     .user-detail h3{font-size:24px}
     .user-detail p{font-size:14px}
-  
+      .log_btn{font-size:18px}
+
     .star-img > img {width: 14px;}
    .user-rate .user-name{margin-top:5px}
-   .user-name > .user-img{width:15%}
+   .user-name > span{text-align:right!important}
+   .user-name > .user-img{width:15%;}
   }
 @media(max-width:360px)
 {
   .feed .resturant-name{max-height:16px;}
   .create{padding-left:5px;font-size:14px;}
   .login{padding-right:5px;font-size:16px;} 
-  .log_btn{font-size:18px}
   .rating-value span{width:100%!important;text-align:left!important}
   .resturant-name{font-size:12px}
   .back_arrrow h2{font-size:18px}
-  .logo{margin:0 auto}
+  .logo{margin:20px auto}
   .user-name h5{font-size:18px}
   .user-del p{font-size:14px}
   .login > span{padding:15px 45px}
@@ -453,7 +472,7 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
   .resturant-detail h3{font-size:18px}
   .resturant-detail p{margin-left:0px;}
   .htl-name p{font-size:13px;  margin-left: 26px;}
- 
+
 
 }
 @media(max-width:320px){
