--- a/client/templates/register.html
+++ b/client/templates/register.html
@@ -33,10 +33,16 @@
                	</span>
               </label>
               <label class="item-input item-floating-label">
-              	<span class="icon-wrap">
-        			    <span class="icon-top"><img src="./mail.png" alt="" /></span>
-                	<input name="email" ng-model="data.email" type="text" placeholder="EMAIL">
-               	</span>
+                <span class="icon-wrap">
+                  <span class="icon-top"><img src="./user.png" alt="" /></span>
+                  <input name="username" ng-model="data.username" type="text" placeholder="USERNAME" required-error-message="This field is required!" validator="required, isUsername">
+                </span>
+              </label>
+              <label class="item-input item-floating-label">
+                <span class="icon-wrap">
+                  <span class="icon-top"><img src="./mail.png" alt="" /></span>
+                  <input name="email" ng-model="data.email" type="text" placeholder="EMAIL">
+                </span>
               </label>
               <label class="item-input item-floating-label">
                	<span class="icon-wrap">
